--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section class="hero">
-    <p class="subtext">Selected Work 2022 – 2025</p>
+    <p class="subtext">Welcome to the magical world</p>
     <div class="line-arrow">
       <div class="line"></div>
       <div class="arrow">→</div>
