--- a/index.html
+++ b/index.html
@@ -2,22 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Devesh - Video Editor</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Devesh Sharma — Video Editor</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
+  <nav class="navbar">
+    <ul>
+      <li>Intro</li>
+      <li>Aim</li>
+      <li>System</li>
+      <li>Reviews</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+
   <section class="hero">
-    <p class="subtext">Welcome to the magical world</p>
-    <div class="line-arrow">
-      <div class="line"></div>
-      <div class="arrow">→</div>
+    <div class="hero-text">
+      <h1>
+        What does the world<br />
+        expect<br />
+        from you ?
+      </h1>
+      <p class="sub">Your next <span class="italic">Creation</span></p>
     </div>
-    <h1 class="main-title">
-      Video<br />Editing<br />Portfolio
-    </h1>
-    <p class="author">Devesh Sharma</p>
+
+    <div class="right-blurb">
+      <h4>You Just Knocked on the Right Door</h4>
+      <p>Here, we don’t chase views — we engineer results.<br />
+      Every project is a hit. No fluff. No noise. Just pure engagement.</p>
+    </div>
+
+    <div class="intro">
+      <p class="hey">Hey there!</p>
+      <p class="im-line">I’m <span class="line">———</span><span class="name">Devesh</span><span class="line">———</span> Sharma</p>
+    </div>
+
+    <div class="portrait">
+      <img src="devesh.png" alt="Devesh portrait" />
+    </div>
+
+    <div class="tagline">
+      <h3>The Goldsmith of Short-Form Content.</h3>
+      <p>I don’t just edit videos—I ignite attention.<br/>
+      With edits that spread like wildfire (or cells in your bloodstream),<br/>
+      I help creators and brands go viral and grow their social media empires.</p>
+    </div>
   </section>
 </body>
 </html>
