--- a/index.html
+++ b/index.html
@@ -2,13 +2,127 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Devesh Sharma — Video Editor</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Devesh Sharma — Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,600&family=Inter:wght@300;400;700&display=swap" rel="stylesheet" />
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      background: radial-gradient(circle at center, #2a2a2a 0%, #1c1c1c 100%);
+      color: #f0f0f0;
+      font-family: 'Inter', sans-serif;
+      height: 100vh;
+      overflow-x: hidden;
+      padding: 40px 60px;
+      position: relative;
+    }
+
+    nav {
+      position: fixed;
+      bottom: 40px;
+      left: 60px;
+    }
+
+    nav ul {
+      display: flex;
+      gap: 30px;
+      list-style: none;
+      font-size: 14px;
+      color: #c4c4c4;
+    }
+
+    .hero-text {
+      position: absolute;
+      top: 80px;
+      right: 60px;
+      text-align: right;
+    }
+
+    .hero-text h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 32px;
+      line-height: 1.8;
+      font-weight: 400;
+    }
+
+    .hero-text p {
+      font-size: 16px;
+      color: #ccc;
+    }
+
+    .italic {
+      font-family: 'Playfair Display', serif;
+      font-style: italic;
+    }
+
+    .right-blurb {
+      position: absolute;
+      right: 60px;
+      top: 240px;
+      text-align: right;
+      max-width: 300px;
+      font-size: 13px;
+      color: #ccc;
+    }
+
+    .intro {
+      position: relative;
+      margin-top: 220px;
+      text-align: center;
+      font-size: 22px;
+    }
+
+    .intro .im-line {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 16px;
+      font-size: 30px;
+      font-weight: 300;
+    }
+
+    .intro .name {
+      font-family: 'Playfair Display', serif;
+      font-size: 40px;
+    }
+
+    .line {
+      flex: 1;
+      height: 1px;
+      background-color: #888;
+    }
+
+    .portrait {
+      display: flex;
+      justify-content: center;
+      margin-top: -60px;
+    }
+
+    .portrait img {
+      height: 400px;
+      object-fit: cover;
+      filter: grayscale(100%) contrast(1.1);
+    }
+
+    .tagline {
+      margin-top: 30px;
+      text-align: center;
+      max-width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      color: #bbb;
+      font-size: 14px;
+      line-height: 1.7;
+    }
+  </style>
 </head>
 <body>
-  <nav class="navbar">
+  <nav>
     <ul>
       <li>Intro</li>
       <li>Aim</li>
@@ -18,37 +132,39 @@
     </ul>
   </nav>
 
-  <section class="hero">
-    <div class="hero-text">
-      <h1>
-        What does the world<br />
-        expect<br />
-        from you ?
-      </h1>
-      <p class="sub">Your next <span class="italic">Creation</span></p>
-    </div>
+  <div class="hero-text">
+    <h1>
+      What does the world<br />
+      expect<br />
+      from you ?
+    </h1>
+    <p>Your next <span class="italic">Creation</span></p>
+  </div>
 
-    <div class="right-blurb">
-      <h4>You Just Knocked on the Right Door</h4>
-      <p>Here, we don’t chase views — we engineer results.<br />
-      Every project is a hit. No fluff. No noise. Just pure engagement.</p>
-    </div>
+  <div class="right-blurb">
+    <h4>You Just Knocked on the Right Door</h4>
+    <p>Here, we don’t chase views — we engineer results.<br />Every project is a hit. No fluff. No noise. Just pure engagement.</p>
+  </div>
 
-    <div class="intro">
-      <p class="hey">Hey there!</p>
-      <p class="im-line">I’m <span class="line">———</span><span class="name">Devesh</span><span class="line">———</span> Sharma</p>
+  <div class="intro">
+    <p>Hey there!</p>
+    <div class="im-line">
+      <div class="line"></div>
+      <span class="name">Devesh</span>
+      <div class="line"></div>
     </div>
+    <p style="margin-top: 8px; font-size: 24px;">Sharma</p>
+  </div>
 
-    <div class="portrait">
-      <img src="devesh.png" alt="Devesh portrait" />
-    </div>
+  <div class="portrait">
+    <img src="devesh.png" alt="Devesh portrait" />
+  </div>
 
-    <div class="tagline">
-      <h3>The Goldsmith of Short-Form Content.</h3>
-      <p>I don’t just edit videos—I ignite attention.<br/>
-      With edits that spread like wildfire (or cells in your bloodstream),<br/>
-      I help creators and brands go viral and grow their social media empires.</p>
-    </div>
-  </section>
+  <div class="tagline">
+    <h3>The Goldsmith of Short-Form Content.</h3>
+    <p>I don’t just edit videos—I ignite attention.<br />
+    With edits that spread like wildfire (or cells in your bloodstream),<br />
+    I help creators and brands go viral and grow their social media empires.</p>
+  </div>
 </body>
 </html>
